small refactoring add windowManager and windows add DrawableButton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(HEADERS
 	${SOURCES_PATH}/calendar.h
 	${SOURCES_PATH}/messages.h
 	${SOURCES_PATH}/dictionary.h	
+	${SOURCES_PATH}/windowManager.h	
 )
 set (SOURCES
 	${SOURCES_PATH}/main.cpp
@@ -27,6 +28,7 @@ set (SOURCES
 	${SOURCES_PATH}/calendar.cpp
 	${SOURCES_PATH}/messages.cpp
 	${SOURCES_PATH}/dictionary.cpp	
+	${SOURCES_PATH}/windowManager.cpp	
 )
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
