add new type drawableObjects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ set(HEADERS
 	${SOURCES_PATH}/calendar.h
 	${SOURCES_PATH}/messages.h
 	${SOURCES_PATH}/dictionary.h	
-	${SOURCES_PATH}/windowManager.h	
+	${SOURCES_PATH}/windowManager.h
+	${SOURCES_PATH}/drawableObjects.h
 )
 set (SOURCES
 	${SOURCES_PATH}/main.cpp
@@ -28,7 +29,8 @@ set (SOURCES
 	${SOURCES_PATH}/calendar.cpp
 	${SOURCES_PATH}/messages.cpp
 	${SOURCES_PATH}/dictionary.cpp	
-	${SOURCES_PATH}/windowManager.cpp	
+	${SOURCES_PATH}/windowManager.cpp
+	${SOURCES_PATH}/drawableObjects.cpp		
 )
 find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
